--- a/fitness-app/index.html
+++ b/fitness-app/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>American Gladiator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Cinzel&family=Oswald:wght@200..700&family=Protest+Revolution&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
