Implementing infinite scroll list and starting some aggregate data

--- a/fitness-app/index.html
+++ b/fitness-app/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Cinzel&family=Oswald:wght@200..700&family=Protest+Revolution&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
